[gd_scene load_steps=5 format=2]

[ext_resource path="res://assets/item/consumable/+1_health_potion.png" type="Texture" id=1]
[ext_resource path="res://assets/interface/stats/icon/increase_stats_icon.png" type="Texture" id=2]
[ext_resource path="res://assets/interface/stats/icon/decrease_stats_icon.png" type="Texture" id=3]
[ext_resource path="res://scripts/interface/sell_item_container.gd" type="Script" id=4]

[node name="ItemContainer" type="HBoxContainer"]
visible = false
margin_right = 56.0
margin_bottom = 16.0
rect_min_size = Vector2( 72, 32 )
script = ExtResource( 4 )

[node name="LeftContainer" type="VBoxContainer" parent="."]
margin_right = 16.0
margin_bottom = 32.0

[node name="Margin" type="Control" parent="LeftContainer"]
margin_right = 16.0
margin_bottom = 7.0
rect_min_size = Vector2( 0, 7 )

[node name="Minos" type="TextureButton" parent="LeftContainer"]
margin_top = 11.0
margin_right = 16.0
margin_bottom = 27.0
rect_min_size = Vector2( 16, 16 )
texture_normal = ExtResource( 3 )
expand = true

[node name="ItemIcon" type="TextureRect" parent="."]
margin_left = 20.0
margin_right = 52.0
margin_bottom = 32.0
rect_min_size = Vector2( 32, 32 )
texture = ExtResource( 1 )
expand = true

[node name="RightContainer" type="VBoxContainer" parent="."]
margin_left = 56.0
margin_right = 72.0
margin_bottom = 32.0

[node name="Margin" type="Control" parent="RightContainer"]
margin_right = 16.0
margin_bottom = 7.0
rect_min_size = Vector2( 0, 7 )

[node name="Plus" type="TextureButton" parent="RightContainer"]
margin_top = 11.0
margin_right = 16.0
margin_bottom = 27.0
rect_min_size = Vector2( 16, 16 )
texture_normal = ExtResource( 2 )
expand = true
